--- a/final project/style.css
+++ b/final project/style.css
@@ -38,33 +38,83 @@ ul li a {
     color: white;
 }
 
-body{
+
+
+
+
+
+@import url(https://fonts.googlepis.com/css2family=poppins:wght@200;300;400;500;600;700display-flex)
+*{
 	margin: 0;
-	font-family: sans-serif;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'poppins',sans-serif;
+}
+body{
+	height: 100vt;
+	justify-content: center;
+	align-items: center;
+    background: linear-gradient(135deg,#71b7e6,#9b59b6);
+    padding: 10px;
+
 }
 
-.section{
+.container{
+	max-width: 700px;
+	width: 100%;
+	background: #fff;
+	padding: 25px 30px;
+	border: 5px;
+}
+.container .title{
+	font-size: 25px;
+	font-weight: 500;
+	position: relative;
+}
+.container .title::before{
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 3px;
+	width: 30px;
+	background: liner-gradient(135deg, #71b7e6, 9b59b6);
+}
+.container from .user-details{
 	display: flex;
-	justify-content: space between;
-	padding: 40px;
-	width: 60;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
-.section img{
-   width: 600px;
-   height: 600px;
-   flex-shrink: 0;
-   background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+from .user-details .input-box{
+	margin: 2opx 0 12px 0;
+	width: calc(100% / 2 - 20px);
 }
-
-.section p{
-	color: black;
-	margin-right: 15px;
+.user-details .input-box .details{
+	display: block;
+	font-weight: 500;
+	margin-bottom: 5px;
+}
+.user-details .input-box input{
+   border-radius: 5px;
+   border: 1px solid #ccc;
+   padding-left: 15 px;
+   font-size: 16px;
+   border-bottom-width: 2px;
+   transition: All 0.3s ease;
+}
+.user-details .input-box input:focus,
+.user-details .input-box input:vaild{
+	border-color: #9b59b6;
+}
+form .gender-details /gender-title{
+	font-size: 20px;
+	font-weight: 500;
 
 }
-
-.text h1{
-    color: #000545;
-	margin-right: 15px;
-
+form .gender-details .category{
+	display: flex;
+	width: 80%;
+	margin: 14px 0;
+	justify-content: space-between;
 }
 
